RESOLVED FIXED194690
WebSocket should not fire events after being stopped
https://bugs.webkit.org/show_bug.cgi?id=194690
Summary WebSocket should not fire events after being stopped
youenn fablet
Reported 2019-02-14 18:59:22 PST
WebSocket should not fire events after being stopped. See rdar://problem/47697857.
Attachments
Patch (4.50 KB, patch)
2019-02-14 20:10 PST, youenn fablet
no flags
Patch (4.58 KB, patch)
2019-02-14 20:38 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-02-14 20:10:27 PST
youenn fablet
Comment 2 2019-02-14 20:38:14 PST
Geoffrey Garen
Comment 3 2019-02-15 10:19:43 PST
Comment on attachment 362094 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-02-15 11:08:12 PST
Comment on attachment 362094 [details] Patch Clearing flags on attachment: 362094 Committed r241599: <https://trac.webkit.org/changeset/241599>
WebKit Commit Bot
Comment 5 2019-02-15 11:08:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-02-15 11:21:42 PST
Note You need to log in before you can comment on or make changes to this bug.